--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/Grenades.GrenadesGameMode"
+TwoPlayerSplitscreenLayout=Vertical
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
@@ -140,5 +141,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
